{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 182,
  "lineage": "a1e748e2-6549-16fc-24c1-24afb648e367",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "ayush",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:279064251746:vpc/vpc-046ca8c61e160877d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0ac1e1141a0af0109",
            "default_route_table_id": "rtb-09511a39cfa6158ba",
            "default_security_group_id": "sg-0f5f3c3aba506d184",
            "dhcp_options_id": "dopt-09a8ffbad1c794ac0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-046ca8c61e160877d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09511a39cfa6158ba",
            "owner_id": "279064251746",
            "region": "us-west-2"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "Ayush-automate-medium",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02167eae61967e403",
            "arn": "arn:aws:ec2:us-west-2:279064251746:instance/i-0ebd505068d02e472",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ebd505068d02e472",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0471f29877b48d1f0"
              }
            ],
            "primary_network_interface_id": "eni-0471f29877b48d1f0",
            "private_dns": "ip-172-31-6-114.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.6.114",
            "public_dns": "ec2-54-187-145-15.us-west-2.compute.amazonaws.com",
            "public_ip": "54.187.145.15",
            "region": "us-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a09678cd3f902461",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "automata"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-072bb00483bbfcfe4",
            "tags": {
              "Environment": "dev ",
              "Name": "Ayush-automate-medium"
            },
            "tags_all": {
              "Environment": "dev ",
              "Name": "Ayush-automate-medium"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c73b8a59769d31f7"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "279064251746",
            "id": "i-0ebd505068d02e472",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_default_vpc.ayush",
            "aws_key_pair.terra_key",
            "aws_security_group.my_security_group"
          ]
        },
        {
          "index_key": "Ayush-automate-micro",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02167eae61967e403",
            "arn": "arn:aws:ec2:us-west-2:279064251746:instance/i-02990b57e6a2fd24f",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02990b57e6a2fd24f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0f3176bc23499c07f"
              }
            ],
            "primary_network_interface_id": "eni-0f3176bc23499c07f",
            "private_dns": "ip-172-31-10-147.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.10.147",
            "public_dns": "ec2-18-246-73-254.us-west-2.compute.amazonaws.com",
            "public_ip": "18.246.73.254",
            "region": "us-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a1ff9b5ff596349f",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "automata"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-072bb00483bbfcfe4",
            "tags": {
              "Environment": "dev ",
              "Name": "Ayush-automate-micro"
            },
            "tags_all": {
              "Environment": "dev ",
              "Name": "Ayush-automate-micro"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c73b8a59769d31f7"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "279064251746",
            "id": "i-02990b57e6a2fd24f",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_default_vpc.ayush",
            "aws_key_pair.terra_key",
            "aws_security_group.my_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:279064251746:security-group/sg-0c73b8a59769d31f7",
            "description": "this will add a tf generated security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all access open outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c73b8a59769d31f7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Flask app",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSh open",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http open",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "automata",
            "name_prefix": "",
            "owner_id": "279064251746",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-046ca8c61e160877d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "279064251746",
            "id": "sg-0c73b8a59769d31f7",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_default_vpc.ayush"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:279064251746:network-acl/acl-0c84abc812e020eb1",
            "default_network_acl_id": "acl-0c84abc812e020eb1",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0c84abc812e020eb1",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "279064251746",
            "region": "us-west-2",
            "subnet_ids": [],
            "tags": {
              "Environment": "env",
              "Name": "ayush-auto-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "env",
              "Name": "ayush-auto-vpc-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ea5ace3cf206109f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:279064251746:route-table/rtb-0c0a0fc8318b4783b",
            "default_route_table_id": "rtb-0c0a0fc8318b4783b",
            "id": "rtb-0c0a0fc8318b4783b",
            "owner_id": "279064251746",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [],
            "tags": {
              "Environment": "env",
              "Name": "ayush-auto-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "env",
              "Name": "ayush-auto-vpc-default",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0ea5ace3cf206109f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:279064251746:security-group/sg-03b1d9b3c0fea0098",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-03b1d9b3c0fea0098",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "279064251746",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "env",
              "Name": "ayush-auto-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "env",
              "Name": "ayush-auto-vpc-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ea5ace3cf206109f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0856c9ca9e9e08ef2",
            "arn": "arn:aws:ec2:us-west-2:279064251746:elastic-ip/eipalloc-0856c9ca9e9e08ef2",
            "domain": "vpc",
            "id": "eipalloc-0856c9ca9e9e08ef2",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-34-218-170-210.us-west-2.compute.amazonaws.com",
            "public_ip": "34.218.170.210",
            "public_ipv4_pool": "amazon",
            "region": "us-west-2",
            "tags": {
              "Environment": "env",
              "Name": "ayush-auto-vpc-us-west-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "env",
              "Name": "ayush-auto-vpc-us-west-2a",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "279064251746",
            "id": "eipalloc-0856c9ca9e9e08ef2",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03ca7fc7c9a9bac52",
            "arn": "arn:aws:ec2:us-west-2:279064251746:elastic-ip/eipalloc-03ca7fc7c9a9bac52",
            "domain": "vpc",
            "id": "eipalloc-03ca7fc7c9a9bac52",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-52-11-94-230.us-west-2.compute.amazonaws.com",
            "public_ip": "52.11.94.230",
            "public_ipv4_pool": "amazon",
            "region": "us-west-2",
            "tags": {
              "Environment": "env",
              "Name": "ayush-auto-vpc-us-west-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "env",
              "Name": "ayush-auto-vpc-us-west-2b",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "279064251746",
            "id": "eipalloc-03ca7fc7c9a9bac52",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eb3b091c52b87481",
            "arn": "arn:aws:ec2:us-west-2:279064251746:elastic-ip/eipalloc-0eb3b091c52b87481",
            "domain": "vpc",
            "id": "eipalloc-0eb3b091c52b87481",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-44-236-249-53.us-west-2.compute.amazonaws.com",
            "public_ip": "44.236.249.53",
            "public_ipv4_pool": "amazon",
            "region": "us-west-2",
            "tags": {
              "Environment": "env",
              "Name": "ayush-auto-vpc-us-west-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "env",
              "Name": "ayush-auto-vpc-us-west-2a",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "279064251746",
            "id": "eipalloc-0eb3b091c52b87481",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:279064251746:internet-gateway/igw-01f340a92bf389af9",
            "id": "igw-01f340a92bf389af9",
            "owner_id": "279064251746",
            "region": "us-west-2",
            "tags": {
              "Environment": "env",
              "Name": "ayush-auto-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "env",
              "Name": "ayush-auto-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ea5ace3cf206109f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "279064251746",
            "id": "igw-01f340a92bf389af9",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0856c9ca9e9e08ef2",
            "association_id": "eipassoc-0ebb129308f2871af",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0a40fbe3bbca848e4",
            "network_interface_id": "eni-0db8bb401a41201ef",
            "private_ip": "10.0.101.125",
            "public_ip": "34.218.170.210",
            "region": "us-west-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-034227e0dd4bff42d",
            "tags": {
              "Environment": "env",
              "Name": "ayush-auto-vpc-us-west-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "env",
              "Name": "ayush-auto-vpc-us-west-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ea5ace3cf206109f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "279064251746",
            "id": "nat-0a40fbe3bbca848e4",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03ca7fc7c9a9bac52",
            "association_id": "eipassoc-029c49b61a7d7ec9b",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0c1627f836747f6a2",
            "network_interface_id": "eni-071ab7af7a2eb2ae8",
            "private_ip": "10.0.102.93",
            "public_ip": "52.11.94.230",
            "region": "us-west-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ac18bd20c19cb1fd",
            "tags": {
              "Environment": "env",
              "Name": "ayush-auto-vpc-us-west-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "env",
              "Name": "ayush-auto-vpc-us-west-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ea5ace3cf206109f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "279064251746",
            "id": "nat-0c1627f836747f6a2",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eb3b091c52b87481",
            "association_id": "eipassoc-0f6660b4bb8da1b90",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-06483e7604b4f3667",
            "network_interface_id": "eni-0456ee8b87550a062",
            "private_ip": "10.0.103.249",
            "public_ip": "44.236.249.53",
            "region": "us-west-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0cff996d3ce7bf63b",
            "tags": {
              "Environment": "env",
              "Name": "ayush-auto-vpc-us-west-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "env",
              "Name": "ayush-auto-vpc-us-west-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ea5ace3cf206109f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "279064251746",
            "id": "nat-06483e7604b4f3667",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02ffb95da90e3d3501080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a40fbe3bbca848e4",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-west-2",
            "route_table_id": "rtb-02ffb95da90e3d350",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "279064251746",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-west-2",
            "route_table_id": "rtb-02ffb95da90e3d350"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03879e8a9ec9467481080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c1627f836747f6a2",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-west-2",
            "route_table_id": "rtb-03879e8a9ec946748",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "279064251746",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-west-2",
            "route_table_id": "rtb-03879e8a9ec946748"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06a589f993eaa8c591080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06483e7604b4f3667",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-west-2",
            "route_table_id": "rtb-06a589f993eaa8c59",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "279064251746",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-west-2",
            "route_table_id": "rtb-06a589f993eaa8c59"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01f340a92bf389af9",
            "id": "r-rtb-0e5a49a44164082aa1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-west-2",
            "route_table_id": "rtb-0e5a49a44164082aa",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "279064251746",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-west-2",
            "route_table_id": "rtb-0e5a49a44164082aa"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:279064251746:route-table/rtb-02ffb95da90e3d350",
            "id": "rtb-02ffb95da90e3d350",
            "owner_id": "279064251746",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [],
            "tags": {
              "Environment": "env",
              "Name": "ayush-auto-vpc-private-us-west-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "env",
              "Name": "ayush-auto-vpc-private-us-west-2a",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea5ace3cf206109f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "279064251746",
            "id": "rtb-02ffb95da90e3d350",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:279064251746:route-table/rtb-03879e8a9ec946748",
            "id": "rtb-03879e8a9ec946748",
            "owner_id": "279064251746",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [],
            "tags": {
              "Environment": "env",
              "Name": "ayush-auto-vpc-private-us-west-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "env",
              "Name": "ayush-auto-vpc-private-us-west-2b",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea5ace3cf206109f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "279064251746",
            "id": "rtb-03879e8a9ec946748",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:279064251746:route-table/rtb-06a589f993eaa8c59",
            "id": "rtb-06a589f993eaa8c59",
            "owner_id": "279064251746",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [],
            "tags": {
              "Environment": "env",
              "Name": "ayush-auto-vpc-private-us-west-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "env",
              "Name": "ayush-auto-vpc-private-us-west-2a",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea5ace3cf206109f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "279064251746",
            "id": "rtb-06a589f993eaa8c59",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:279064251746:route-table/rtb-0e5a49a44164082aa",
            "id": "rtb-0e5a49a44164082aa",
            "owner_id": "279064251746",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01f340a92bf389af9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "env",
              "Name": "ayush-auto-vpc-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "env",
              "Name": "ayush-auto-vpc-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea5ace3cf206109f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "279064251746",
            "id": "rtb-0e5a49a44164082aa",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08bead6d7f7f56e43",
            "region": "us-west-2",
            "route_table_id": "rtb-02ffb95da90e3d350",
            "subnet_id": "subnet-0f536c29339b1cec7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "279064251746",
            "id": "rtbassoc-08bead6d7f7f56e43",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f139fcceb4ab98f",
            "region": "us-west-2",
            "route_table_id": "rtb-03879e8a9ec946748",
            "subnet_id": "subnet-0a30dd6dc4b8cb76c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "279064251746",
            "id": "rtbassoc-01f139fcceb4ab98f",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-012c3b5b6dc12dfa8",
            "region": "us-west-2",
            "route_table_id": "rtb-06a589f993eaa8c59",
            "subnet_id": "subnet-0c1b79be26bc5ee9c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "279064251746",
            "id": "rtbassoc-012c3b5b6dc12dfa8",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db1722188de4e712",
            "region": "us-west-2",
            "route_table_id": "rtb-0e5a49a44164082aa",
            "subnet_id": "subnet-034227e0dd4bff42d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "279064251746",
            "id": "rtbassoc-0db1722188de4e712",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09aac57e326989b66",
            "region": "us-west-2",
            "route_table_id": "rtb-0e5a49a44164082aa",
            "subnet_id": "subnet-0ac18bd20c19cb1fd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "279064251746",
            "id": "rtbassoc-09aac57e326989b66",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05cee7648ce57f1b8",
            "region": "us-west-2",
            "route_table_id": "rtb-0e5a49a44164082aa",
            "subnet_id": "subnet-0cff996d3ce7bf63b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "279064251746",
            "id": "rtbassoc-05cee7648ce57f1b8",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:279064251746:subnet/subnet-0f536c29339b1cec7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f536c29339b1cec7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "279064251746",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Environment": "env",
              "Name": "ayush-auto-vpc-private-us-west-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "env",
              "Name": "ayush-auto-vpc-private-us-west-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ea5ace3cf206109f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "279064251746",
            "id": "subnet-0f536c29339b1cec7",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:279064251746:subnet/subnet-0a30dd6dc4b8cb76c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a30dd6dc4b8cb76c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "279064251746",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Environment": "env",
              "Name": "ayush-auto-vpc-private-us-west-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "env",
              "Name": "ayush-auto-vpc-private-us-west-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ea5ace3cf206109f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "279064251746",
            "id": "subnet-0a30dd6dc4b8cb76c",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:279064251746:subnet/subnet-0c1b79be26bc5ee9c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1b79be26bc5ee9c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "279064251746",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Environment": "env",
              "Name": "ayush-auto-vpc-private-us-west-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "env",
              "Name": "ayush-auto-vpc-private-us-west-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ea5ace3cf206109f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "279064251746",
            "id": "subnet-0c1b79be26bc5ee9c",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:279064251746:subnet/subnet-034227e0dd4bff42d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-034227e0dd4bff42d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "279064251746",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Environment": "env",
              "Name": "ayush-auto-vpc-public-us-west-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "env",
              "Name": "ayush-auto-vpc-public-us-west-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ea5ace3cf206109f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "279064251746",
            "id": "subnet-034227e0dd4bff42d",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:279064251746:subnet/subnet-0ac18bd20c19cb1fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ac18bd20c19cb1fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "279064251746",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Environment": "env",
              "Name": "ayush-auto-vpc-public-us-west-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "env",
              "Name": "ayush-auto-vpc-public-us-west-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ea5ace3cf206109f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "279064251746",
            "id": "subnet-0ac18bd20c19cb1fd",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:279064251746:subnet/subnet-0cff996d3ce7bf63b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cff996d3ce7bf63b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "279064251746",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Environment": "env",
              "Name": "ayush-auto-vpc-public-us-west-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "env",
              "Name": "ayush-auto-vpc-public-us-west-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ea5ace3cf206109f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "279064251746",
            "id": "subnet-0cff996d3ce7bf63b",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:279064251746:vpc/vpc-0ea5ace3cf206109f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c84abc812e020eb1",
            "default_route_table_id": "rtb-0c0a0fc8318b4783b",
            "default_security_group_id": "sg-03b1d9b3c0fea0098",
            "dhcp_options_id": "dopt-09a8ffbad1c794ac0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ea5ace3cf206109f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c0a0fc8318b4783b",
            "owner_id": "279064251746",
            "region": "us-west-2",
            "tags": {
              "Environment": "env",
              "Name": "ayush-auto-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "env",
              "Name": "ayush-auto-vpc",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "279064251746",
            "id": "vpc-0ea5ace3cf206109f",
            "region": "us-west-2"
          }
        }
      ]
    }
  ]
}